ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/US_Sales_Quote_Calculated_fields__mdt/US_Sales_Quote_Calculated_fields__mdt.object-meta.xml
<CustomObject>
    <description>This metadate type will include all information regarding the static value used to perform the calculation of opportunity fields based on the Estimated Project size (square) fields.</description>
    <label>US-Sales Quote Calculated fields</label>
    <pluralLabel>US-Sales Quote Calculated fields</pluralLabel>
</CustomObject>