ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/US_Sales_Quote_Calculated_fields__mdt/fields/IKO_Shingles__c.field-meta.xml
<CustomField>
    <fullName>IKO_Shingles__c</fullName>
    <label>IKO Shingles</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>