ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/US_Sales_Quote_Calculated_fields__mdt/fields/IKO_Shingles_per_Square__c.field-meta.xml
<CustomField>
    <fullName>IKO_Shingles_per_Square__c</fullName>
    <label>IKO Shingles per Square</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>