ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/US_Sales_Quote_Calculated_fields__mdt/fields/Nails_per_box__c.field-meta.xml
<CustomField>
    <fullName>Nails_per_box__c</fullName>
    <label>Nails per box</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>