ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/US_Sales_Quote_Calculated_fields__mdt/fields/Non_IKO_Shingles_per_Square__c.field-meta.xml
<CustomField>
    <fullName>Non_IKO_Shingles_per_Square__c</fullName>
    <label>Non-IKO Shingles per Square</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>