ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/US_Sales_Quote_Calculated_fields__mdt/fields/Non_IKO_SQ_Multiplier_for_coverage__c.field-meta.xml
<CustomField>
    <fullName>Non_IKO_SQ_Multiplier_for_coverage__c</fullName>
    <label>Non-IKO SQ Multiplier (for coverage)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>